--- a/css/master.css
+++ b/css/master.css
@@ -23,18 +23,19 @@ de transformaciones.
 }
 
 .loader-doble{
-	width: 60px;
-	height: 23px;
-	border: 4px solid yellow;
+	width: 4rem;
+	height: 1rem;
+	border: 0.21rem solid #ffd700;
+	border-top: 0.21rem solid #bf930d;
 	border-radius: 50%;
 	animation: label-animation;
 	animation-duration: 1s;
 	animation-timing-function: ease-in-out;
 	animation-iteration-count: infinite;
 	animation-direction: alternate;
+	display: flex;
 	position: absolute;
-	top: 20%;
-	left: 18%;
+	z-index: 2;
 }
 
 .animada{
@@ -51,7 +52,6 @@ de transformaciones.
 
 .principal{
 	display: flex;
-
 	height: 386px;
 	width: 1121px;
 }
@@ -62,6 +62,8 @@ de transformaciones.
 	width: 22.36rem;
 	border-radius: 10px; 
 	border-top-right-radius: 0px;
+	position: relative;
+	z-index: 1;
 }
 
 .info-container{
@@ -78,6 +80,10 @@ de transformaciones.
 	font-family: roboto;
 }
 /*css grid youtube*/
+
+.SP{
+	width: 10rem;
+}
 
 .footer{
 	background-color: red;
